feat: user docs
